tests/snapshots/cli__desugar_linearize_matches.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/desugar_linearize_matches.bend
---
unchecked main: Any
(main) = λa λb λc (switch a { 0: λd λ* d; _: λ* λ* λe e; } b c)
