tests/snapshots/cli__desugar_linearize_matches.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/desugar_linearize_matches.hvm
---
(main) = λa λb (match a { 0: λc c; 1+: λ* λf f } b)
