tests/snapshots/cli__desugar_linearize_matches_alt.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/desugar_linearize_matches_alt.bend
---
unchecked main: Any
(main) = λa switch a { 0: λb b; _: λ* λc c; }
