tests/snapshots/cli__desugar_linearize_matches_extra.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/desugar_linearize_matches_extra.hvm
---
(main) = λa λb λc (switch a { 0: λd λ* d; _: λ* λ* λe e; } b c)
