tests/snapshots/cli__desugar_merge.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/desugar_merge.hvm
---
Warnings:
In definition 'Z':
  Definition is unused.

(F__M_Z) = λ* λa a

(main) = F__M_Z
