tests/snapshots/cli__desugar_prune.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/desugar_prune.hvm
---
(main) = *
