tests/snapshots/cli__desugar_ref_to_ref.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/desugar_ref_to_ref.hvm
---
(Foo) = λ* 0

(Bar) = Foo

(Main) = (Foo *)
